<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/myImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/imageText"
        android:src="@drawable/ic_space_launch" />


    <Button
        android:id="@+id/launch_first_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/launchFirstActivity" />

    <TextView
        android:id="@+id/tv_first_activity_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="" />

    <Button
        android:id="@+id/launch_second_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launchSecondActivity" />

    <TextView
        android:id="@+id/tv_second_activity_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/snackBarBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_launcher_foreground"
        app:fabSize="normal"
     />
</LinearLayout>